--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -11,14 +11,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../stylesheet.css">
     <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
-
 </head>
 <body>
     <div class="container">
         <div class="row">
            <a href="../index.html">
             <div class="col-sm-12">
-                <h1><b>Aurelia DeLyall: Regency Style</b></h1>
+                <h1><b>Homesewn Regency Style’ </b></h1>
                 <h2><b>Regency inspired fashions in generous sizes</b></h2>
             </div>
             </a>
@@ -50,7 +49,7 @@
         <div class="row">
            <div class="col-sm-12">
               <img src="../Media/IMG/Hall.png" alt="Ironing" id="Hall">
-               <p>I cannot thank Emily Chalkley and the team at Cannon Hall enough (see <a href="./ULinks.html">‘Useful Links’</a> for details) for their generous permission to photograph a number of garments against the fabulous backdrop of their interiors and parklands.  This is truly a wonderful, period resource and staff could not have been more helpful despite my disrupting their daily routine!  Similarly, huge thanks are due to my dear friend Mrs Dorothea Chamberlayne, who always supports this venture and pitches in to present the garments at their best for photography.
+               <p>I cannot thank Emily Chalkley and the team at Cannon Hall enough (see <a href="./ULinks.html" class="shoplink">‘Useful Links’</a> for details) for their generous permission to photograph a number of garments against the fabulous backdrop of their interiors and parklands.  This is truly a wonderful, period resource and staff could not have been more helpful despite my disrupting their daily routine!  Similarly, huge thanks are due to my dear friend Mrs Dorothea Chamberlayne, who supports this venture and is seen here characteristically pitching in to present the garments.
                </p>
                <br />
                <h2>Second hand sales</h2>
@@ -61,7 +60,7 @@
             
         <div class="row">
            <div class="col-sm-12">
-               <h1>Important:  Please read notes on <a href="./contr:fit.html">‘Construction and Fit’</a>, as these dresses do not fit as standard sizes.</h1>
+               <h1>Important:  Please read notes on <a href="./contr:fit.html" class="shoplink">‘Construction and Fit’</a>, as these dresses do not fit as standard sizes.</h1>
             </div>
         </div>
 
@@ -85,6 +84,47 @@
             </div>
         </div>
         <hr>
+        <div class="row">
+           <div class="col-md-6">
+                <h3>CB21 £70 inc p&p (Size guide 18 / 20)</h3>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="loginForm">
+                <input type="hidden" name="cmd" value="_s-xclick" class="form-control">
+                <input type="hidden" name="hosted_button_id" value="YB4JBCDN4696W" class="form-control">
+                <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!" class="form-control">
+                <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+                </form>
+                <p>This Spencer is made from a heavy, stiff flocked brocade with a bodice lining in a burgundy / gold silky polyester.  The fabric was washed before sewing using a delicate wash cycle, but should probably be laundered separately in the future to avoid any colour run as it is a very deep shade.  The armhole seams proved too bulky to be bound, so are securely zig-zagged in place. There are gold-coloured military style buttons used as decoration at the underbust band and a small one as a closure at the neck.  A concealed hook and bar is used to fasten the Spencer at the underbust.
+                <br />
+                    When fastened and laid flat, the garment measures 22 and a half inches from underarm to underarm seam, but there is a little extra ease due to the fullness at the front for the bust.  There is a small overlap down the front opening of about an inch.  The best way to enlarge the Spencer if necessary in the future would be to cut off and finish the edge of the underband overlaps - thereby making the garment an edge-to-edge jacket, ideal for a couple of frog fasteners to be attached.  The sleeves measure 24 inches from shoulder seam to cuff edge, but these have been very simply finished with a turn over hem to make shortening easy; the only way to lengthen would be to attach a lace flounce at the cuff.  The measurement at centre back to lower edge is approximately 15 inches.</p>
+           </div>
+            <div class="col-md-6">
+              <img src="../Media/IMG/CB21/IMG_3264 copy.jpg" alt="CB21 Wide 1" class="dress-wide myImages">
+               <img src="../Media/IMG/CB21/IMG_3263%20copy.jpg" alt="CB21 Front" class="dress-long myImages">
+                <img src="../Media/IMG/CB21/IMG_3267 copy.jpg" alt="CB21 Back" class="dress-long myImages">
+                <img src="../Media/IMG/CB21/IMG_3265 copy.jpg" alt="CB21 Side" class="dress-long myImages">
+                <img src="../Media/IMG/CB21/IMG_3270 copy.jpg" alt="CB21 Wide 2" class="dress-wide myImages">
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+           <div class="col-md-6">
+               <h3>CB22 £65 (Size guide 18 / 22)</h3>
+               <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="loginForm">
+                <input type="hidden" name="cmd" value="_s-xclick" class="form-control">
+                <input type="hidden" name="hosted_button_id" value="YB4JBCDN4696W" class="form-control">
+                <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!" class="form-control">
+                <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+                </form>
+                <p>This Spencer is made from a mid-weight cotton rich sateen which could be worn both in the cooler months and - because it is unlined – the warmer ones too.  All seams are bound, and the fabric has been washed before construction so there is unlikely to be any shrinkage.  Due to the sateen sheen on the fabric I would suggest using a delicate cycle and cool wash.  There is a gold-coloured military style decorative button at the underbust band which is secured with a concealed hook and bar fastener.  The olive green frog fasteners at the bust and top front are only lightly sewn in to accommodate adjustment to suit.  When fastened and laid flat, the Spencer measures approximately 22.5 inches from underarm to underarm seam, but there is a little ease due to fullness at the front for the bust.  There is a small overlap at the front opening of about an half an inch, but the underbust fastener could easily be adjusted to make it larger, thereby making the garment an edge-to-edge style (this would require re-setting the frogs, of course). The arms measure 23.5 inches from shoulder seam to cuff edge, but these have been very simply finished with a turn over hem to make shortening easy; the only way to lengthen would be to attach a lace flounce at the cuff.  The measurement at centre back to lower edge is approximately 16 inches.</p>
+           </div>
+            <div class="col-md-6">
+              <img src="../Media/IMG/CB22/IMG_3272 copy.jpg" alt="CB22 Side" class="cb-wide myImages">
+               <img src="../Media/IMG/CB22/IMG_3273 copy.jpg" alt="CB22 Back" class="cb-left myImages">
+                <img src="../Media/IMG/CB22/IMG_3271 copy.jpg" alt="CB22 Front" class="cb-left myImages">
+                <img src="../Media/IMG/CB22/IMG_3274 copy.jpg" alt="CB22 Wide" class="dress-wide myImages">
+            </div>
+        </div>
+         <hr>
         <div class="row">
            <div class="col-md-6">
                <h3>EW22 £108 (Size guide 22 / 24)</h3>
