--- a/Pages/contr:fit.html
+++ b/Pages/contr:fit.html
@@ -17,7 +17,7 @@
         <div class="row">
            <a href="../index.html">
             <div class="col-sm-12">
-                <h1><b>Aurelia DeLyall: Regency Style</b></h1>
+                <h1><b>Homesewn Regency Style’ </b></h1>
                 <h2><b>Regency inspired fashions in generous sizes</b></h2>
             </div>
             </a>
@@ -58,7 +58,7 @@
                   <div>
                    <img src="../Media/IMG/C:F3.png" alt="Fit 3" id="Fit3">
                    <p>
-                    All bodices are lined with a strong cotton to maintain shape, but skirts are only lined where there is an element of poly in the fabric (thereby preventing ‘cling’), or if the fabric is particularly delicate and requires a lining for decency’s sake.  Skirt linings are usually made of 100% light cotton muslin, and generally fall to the calf.
+                    All dress bodices are lined with a strong cotton to maintain shape, but skirts are only lined where there is an element of poly in the fabric (thereby preventing ‘cling’), or if the fabric is particularly delicate and requires a lining for decency’s sake.  Skirt linings are usually made of 100% light cotton muslin, and generally fall to the calf.
                 </p>
                 </div>
                 <div>
@@ -68,8 +68,11 @@
                 <p>
                     The underbust on all the drawstring dresses is fitted with elastic, which is fully adjustable to fit.  You will find that there is a loop of elastic protruding from the drawstring channel on the inside of the fabric for this purpose, held in place for transit with a safety pin.  One fitted to size, it may be best to put some strong stitches in the elastic to secure unless you envisage having to make fluctuating adjustments in the future.  Should you find you need to take out some fullness at the bust, I find the best method is to simply put in a couple of vertical seams at the front from neck channel to underbust channel, placed so that they disappear into the gathers. <br /><br />
 Most garments have a reasonable hem which can be let down, and I have in most cases been able to affix any trims away from the hem stitching to make this easier.  To take up dresses with a lace trim or flounce, I would suggest pinching all the way around ABOVE the trim until the desired shortened length is achieved then stitching the resulting channel in place, rather than the more laborious method of taking the trim off, shortening the hem, then replacing the trim.<br /><br />
+Spencers, pelisses and sundry items will have their own construction and fitting notes included in their individual listings, so please read these carefully.<br /><br />
 <b class="imp">Finally, a note on Underwear!!!</b><br /><br />
-While it is great if you have them, there is absolutely no need at all to go to the trouble of obtaining ‘short stays’, as there are a few unconventional cheats you can employ.  I find a good, supportive balcony bra (M&S padded, underwired ‘Fleur’ is my article of choice here) is adequate for the non-gathered bodices.  However, for the drawstring styles, the gathering tends to fall down the cleavage gap, so I sew a robust panel (use something like ‘Peltex Ultra-Firm Sew-In Stabilizer’) to the bra from centre of cup to centre of cup and tack it in place to the underwiring channels of the bra.  For lighter fabrics, this is sufficient, but for stronger fabrics it is sometimes necessary to place some padding behind the panel in the gap area - I find a rolled-up pair of socks to be just the thing!  Not particularly elegant, but it does the job!
+All fabrics, be they brand new or upcycled, will have been laundered before construction to hopefully counter any subsequent shrinkage when washed again.  However, it would be prudent to wash using a short 30 or 40 degree cycle, and the more delicate items might benefit from being hand-washed.  I really wouldn’t recommend tumble drying anything due to the delicacy of the lace and / or trims.<br /><br />
+While it is great if you have them, there is absolutely no need at all to go to the trouble of obtaining ‘short stays’, as there are a few unconventional cheats you can employ.  I find a good, supportive balcony bra (M&S padded, underwired ‘Fleur’ is my article of choice here) is adequate for the non-gathered bodices.  However, for the drawstring styles, the gathering tends to fall down the cleavage gap, so I sew a robust panel (use something like ‘Peltex Ultra-Firm Sew-In Stabilizer’) to the bra from centre of cup to centre of cup and tack it in place to the underwiring channels of the bra.  For lighter fabrics, this is sufficient, but for stronger fabrics it is sometimes necessary to place some padding behind the panel in the gap area - I find a rolled-up pair of socks to be just the thing!  Not particularly elegant, but it does the job!<br /><br />
+                While it is great while you have them or are an absolute purist, there is no need ……
 
                 </p>
             </div>
