--- a/Pages/delivery.html
+++ b/Pages/delivery.html
@@ -17,7 +17,7 @@
         <div class="row">
            <a href="../index.html">
             <div class="col-sm-12">
-                <h1><b>Aurelia DeLyall: Regency Style</b></h1>
+                <h1><b>Homesewn Regency Style’ </b></h1>
                 <h2><b>Regency inspired fashions in generous sizes</b></h2>
             </div>
             </a>
