--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -17,7 +17,7 @@
         <div class="row">
            <a href="../index.html">
             <div class="col-sm-12">
-                <h1><b>Aurelia DeLyall: Regency Style</b></h1>
+                <h1><b>Homesewn Regency Style’ </b></h1>
                 <h2><b>Regency inspired fashions in generous sizes</b></h2>
             </div>
             </a>
@@ -45,8 +45,38 @@
                 </nav>
             </div>
         </div>
-         <div class="row">
+        <div class="row">
             <div class="col-sm-12">
+               <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+     <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="item active">
+                      <img class="d-block w-50" src="../Media/IMG/Gallery/IMG_20190914_120310510%20copy.jpg" alt="Green, White, Pink Dress">
+                    </div>
+                    <div class="item">
+                      <img class="d-block w-50" src="../Media/IMG/Gallery/IMG_2943%20copy.jpg" alt="Black and White dress 1">
+                    </div>
+                    <div class="item">
+                      <img class="d-block w-50" src="../Media/IMG/Gallery/IMG_2946%20copy.jpg" alt="Black and White dress 2">
+                    </div>
+                    <div class="item">
+                      <img class="d-block w-50" src="../Media/IMG/Gallery/IMG_2949%20copy.jpg" alt="Purple and Yellow Dress">
+                    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
             </div>
         </div>
         <div class="row">
