--- a/Pages/ULinks.html
+++ b/Pages/ULinks.html
@@ -17,8 +17,8 @@
         <div class="row">
            <a href="../index.html">
             <div class="col-sm-12">
-                <h1><b>Homesewn Regency Style’ </b></h1>
-                <h2><b>Regency inspired fashions in generous sizes</b></h2>
+                <h1><b>Aurelia DeLyall </b></h1>
+                 <h2><b>Homesewn Regency Style<br /> Regency inspired fashions in generous sizes</b></h2>
             </div>
             </a>
         </div>
@@ -47,7 +47,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12">
-                <p>Cannon Hall is a wonderful facility for those interested in Georgian or Regency influences, based in the beautiful rural outskirts of Barnsley, South Yorkshire, and is where I have been fortunate enough to obtain permission to photograph many of my dresses.  It really is well worth a visit – particularly in costume as a participant at the glorious Regency Ball.  Relevant information about the Hall and events can be found:  <a href="http://www.cannon-hall.com" target="_blank" class="shoplink">http://www.cannon-hall.com/</a>
+                <p>Cannon Hall is a wonderful facility for those interested in Georgian or Regency influences, based in the beautiful rural outskirts of Barnsley, South Yorkshire, and is where I have been fortunate enough to obtain permission to photograph many of my dresses.  It really is well worth a visit – particularly in costume as a participant at the glorious Regency Ball.  Relevant information about the Hall and events can be found at:  <a href="http://www.cannon-hall.com" target="_blank" class="shoplink">http://www.cannon-hall.com/</a>
                 <br /><br />
                 This website has been painstakingly developed and constructed by (<a href="https://rmschrader1994.github.io/Portfolio/" target="_blank" class="shoplink"> Rebecca Schrader</a> ), who has shown infinite patience in amending and adapting at frequent intervals to address my whims, changes of mind and niggling tweaks without complaint or contradiction!
                 </p>
