--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -17,8 +17,8 @@
         <div class="row">
            <a href="../index.html">
             <div class="col-sm-12">
-                <h1><b>Homesewn Regency Style’ </b></h1>
-                <h2><b>Regency inspired fashions in generous sizes</b></h2>
+                <h1><b>Aurelia DeLyall </b></h1>
+                <h2><b>Homesewn Regency Style<br /> Regency inspired fashions in generous sizes</b></h2>
             </div>
             </a>
         </div>
@@ -47,6 +47,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12">
+              <h2>From the collection of Lady Lah-di-Dah, worn at the Cannon Hall Regency Ball 2018 and the Jane Austen Festival, Bath</h2>
                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
