--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div class="row">
            <a href="index.html">
             <div class="col-sm-12">
-                <h1><b>Homesewn Regency Style’ </b></h1>
-                <h2><b>Regency inspired fashions in generous sizes</b></h2>
+                <h1><b>Aurelia DeLyall </b></h1>
+                <h2><b>Homesewn Regency Style<br /> Regency inspired fashions in generous sizes</b></h2>
             </div>
             </a>
         </div>
