--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -17,8 +17,8 @@
         <div class="row">
            <a href="../index.html">
             <div class="col-sm-12">
-                <h1><b>Homesewn Regency Style’ </b></h1>
-                <h2><b>Regency inspired fashions in generous sizes</b></h2>
+                <h1><b>Aurelia DeLyall </b></h1>
+                <h2><b>Homesewn Regency Style<br /> Regency inspired fashions in generous sizes</b></h2>
             </div>
             </a>
         </div>
@@ -49,7 +49,7 @@
         <div class="row">
            <div class="col-sm-12">
               <img src="../Media/IMG/Hall.png" alt="Ironing" id="Hall">
-               <p>I cannot thank Emily Chalkley and the team at Cannon Hall enough (see <a href="./ULinks.html" class="shoplink">‘Useful Links’</a> for details) for their generous permission to photograph a number of garments against the fabulous backdrop of their interiors and parklands.  This is truly a wonderful, period resource and staff could not have been more helpful despite my disrupting their daily routine!  Similarly, huge thanks are due to my dear friend Mrs Dorothea Chamberlayne, who supports this venture and is seen here characteristically pitching in to present the garments.
+               <p>I cannot thank Emily Chalkley and the team at Cannon Hall enough (see <a href="./ULinks.html" class="shoplink">‘Links’</a> for details) for their generous permission to photograph a number of garments against the fabulous backdrop of their interiors and parklands.  This is truly a wonderful, period resource and staff could not have been more helpful despite my disrupting their daily routine!  Similarly, huge thanks are due to my dear friend Mrs Dorothea Chamberlayne, who supports this venture and is seen here characteristically pitching in to present the garments at their beautiful best.
                </p>
                <br />
                <h2>Second hand sales</h2>
@@ -115,7 +115,7 @@
                 <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!" class="form-control">
                 <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
                 </form>
-                <p>This Spencer is made from a mid-weight cotton rich sateen which could be worn both in the cooler months and - because it is unlined – the warmer ones too.  All seams are bound, and the fabric has been washed before construction so there is unlikely to be any shrinkage.  Due to the sateen sheen on the fabric I would suggest using a delicate cycle and cool wash.  There is a gold-coloured military style decorative button at the underbust band which is secured with a concealed hook and bar fastener.  The olive green frog fasteners at the bust and top front are only lightly sewn in to accommodate adjustment to suit.  When fastened and laid flat, the Spencer measures approximately 22.5 inches from underarm to underarm seam, but there is a little ease due to fullness at the front for the bust.  There is a small overlap at the front opening of about an half an inch, but the underbust fastener could easily be adjusted to make it larger, thereby making the garment an edge-to-edge style (this would require re-setting the frogs, of course). The arms measure 23.5 inches from shoulder seam to cuff edge, but these have been very simply finished with a turn over hem to make shortening easy; the only way to lengthen would be to attach a lace flounce at the cuff.  The measurement at centre back to lower edge is approximately 16 inches.</p>
+                <p>This Spencer is made from a mid-weight cotton rich sateen which could be worn both in the cooler months and - because it is unlined – the warmer ones too.  All seams are bound, and the fabric has been washed before construction so there is unlikely to be any shrinkage.  Due to the sateen sheen on the fabric I would suggest using a delicate cycle and cool wash.  There is a gold-coloured military style decorative button at the underbust band which is secured with a concealed hook and bar fastener.  The olive green frog fasteners at the bust and top front are only lightly sewn in to accommodate adjustment to suit.  When fastened and laid flat, the Spencer measures approximately 22.5 inches from underarm to underarm seam, but there is a little ease due to fullness at the front for the bust.  There is a small overlap at the front opening of about an half an inch, but the underbust fastener could easily be adjusted to make it larger, thereby making the garment an edge-to-edge style (this would require re-setting the frogs, of course). The arms measure 23.5 inches from shoulder seam to cuff edge, but these have been very simply finished with a turn over hem to make shortening easy; the only way to lengthen would be to attach a lace flounce at the cuff.  The measurement at centre back to lower edge is approximately 16 inches. As a point of note, the colour of this Spencer appears a shade of Teal on some monitors, but in reality it is actually a brighter shade of grass / emerald green.</p>
            </div>
             <div class="col-md-6">
               <img src="../Media/IMG/CB22/IMG_3272 copy.jpg" alt="CB22 Side" class="cb-wide myImages">
