--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -47,7 +47,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12">
-              <h2>From the collection of Lady Lah-di-Dah, worn at the Cannon Hall Regency Ball 2018 and the Jane Austen Festival, Bath</h2>
+              <h4 style="text-align: center">From the collection of Lady Lah-di-Dah, worn at the Cannon Hall Regency Ball 2018 and the Jane Austen Festival, Bath</h4>
                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
